[package]
name = "erase_him"
version = "0.1.0"
authors = ["Kolsky <kolskytr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
toml = "0.5.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
anyhow = "1.0.33"
thiserror = "1.0.21"